# api-server/openapi/model_get_all_spectra_200_response.go
@@ -1,0 +1,33 @@
+/*
+ * MassBank Tool API
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 0.1
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type GetAllSpectra200Response struct {
+	TotalCount int32 `json:"totalCount,omitempty"`
+
+	Spectra []SpectrumListItem `json:"spectra,omitempty"`
+}
+
+// AssertGetAllSpectra200ResponseRequired checks if the required fields are not zero-ed
+func AssertGetAllSpectra200ResponseRequired(obj GetAllSpectra200Response) error {
+	return nil
+}
+
+// AssertRecurseGetAllSpectra200ResponseRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of GetAllSpectra200Response (e.g. [][]GetAllSpectra200Response), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseGetAllSpectra200ResponseRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aGetAllSpectra200Response, ok := obj.(GetAllSpectra200Response)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertGetAllSpectra200ResponseRequired(aGetAllSpectra200Response)
+	})
+}
